fix #55: Fix code scanning alert - Building a command line with string concatenation; fix #56:Fix code scanning alert - Building a command line with string concatenation